--- a/bottomsheet-commons/build.gradle
+++ b/bottomsheet-commons/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '23.0.2'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 26
     }
     lintOptions {
           abortOnError false
@@ -21,7 +21,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':bottomsheet')
-    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
 }
 
 publish {
@@ -29,7 +29,6 @@ publish {
     groupId = 'com.sproypef'
     artifactId = 'bottomsheet-commons'
     publishVersion = VERSION
-    description = 'Common components library for BottomSheet'
+    desc = 'Common components library for BottomSheet'
     website = 'https://github.com/sproypef/bottomsheet'
-    licences = ['BSD 3-Clause']
 }
