--- a/bottomsheet/build.gradle
+++ b/bottomsheet/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '23.0.2'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 26
     }
     lintOptions {
           abortOnError false
@@ -22,7 +22,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:support-v4:26.1.0'
 }
 
 publish {
@@ -30,7 +30,6 @@ publish {
     groupId = 'com.sproypef'
     artifactId = 'bottomsheet-core'
     publishVersion = VERSION
-    description = 'Android component which presents a dismissible view from the bottom of the screen'
+    desc = 'Android component which presents a dismissible view from the bottom of the screen'
     website = 'https://github.com/sproypef/bottomsheet'
-    licences = ['BSD 3-Clause']
 }
