--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.novoda:bintray-release:0.3.4'
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.novoda:bintray-release:0.9.2'
     }
 }
 
@@ -28,35 +28,45 @@ ext {
     VERSION = version()
 }
 
-task bumpMajor << {
-    ant.propertyfile(file: 'version.properties') {
-        entry(key: 'major', type: 'int', operation: '+', value: 1)
-        entry(key: 'minor', type: 'int', operation: '=', value: 0)
-        entry(key: 'patch', type: 'int', operation: '=', value: 0)
+task bumpMajor {
+    doLast {
+        ant.propertyfile(file: 'version.properties') {
+            entry(key: 'major', type: 'int', operation: '+', value: 1)
+            entry(key: 'minor', type: 'int', operation: '=', value: 0)
+            entry(key: 'patch', type: 'int', operation: '=', value: 0)
+        }
     }
 }
 
-task bumpMinor << {
-    ant.propertyfile(file: 'version.properties') {
-        entry(key: 'minor', type: 'int', operation: '+', value: 1)
-        entry(key: 'patch', type: 'int', operation: '=', value: 0)
+task bumpMinor {
+    doLast {
+        ant.propertyfile(file: 'version.properties') {
+            entry(key: 'minor', type: 'int', operation: '+', value: 1)
+            entry(key: 'patch', type: 'int', operation: '=', value: 0)
+        }
     }
 }
 
-task bumpPatch << {
-    ant.propertyfile(file: 'version.properties') {
-        entry(key: 'patch', type: 'int', operation: '+', value: 1)
+task bumpPatch {
+    doLast {
+        ant.propertyfile(file: 'version.properties') {
+            entry(key: 'patch', type: 'int', operation: '+', value: 1)
+        }
     }
 }
 
-task genReadMe << {
-    def template = file('README.md.template').text
-    def result = template.replaceAll("%%version%%", version())
-    file("README.md").withWriter{ it << result }
+task genReadMe {
+    doLast {
+        def template = file('README.md.template').text
+        def result = template.replaceAll("%%version%%", version())
+        file("README.md").withWriter { it << result }
+    }
 }
 
-task version << {
-    println version()
+task version {
+    doLast {
+        println version()
+    }
 }
 
 def String version() {
